initial stage
