# src/api/schemas/Places.ts
@@ -1,0 +1,15 @@
+import {Schema,model, Document} from 'mongoose'
+
+interface PlacesInterface extends Document{
+    name: string,
+    photo : string
+}
+const PlacesSchema = new Schema({
+    name: String,
+    photo: String
+},
+{
+    timestamps: false
+})
+
+export default model<PlacesInterface>('Places',PlacesSchema)
