# src/swagger.json
@@ -24,16 +24,15 @@
                "tags": ["Users"],
                "requestBody":{
                    "content":{
-                       "aplication/json":{
+                       "application/json":{
                            "schema":{
                             "$ref": "#/components/schemas/Users"
                            },
                            "examples": {
                                 "Users": {
                                     "value":{
-                                        "name": "Lucas Amorim Lima",
-                                        "email": "lucasamorimolima17@gmail.com",
-                                        "password": "1d547Erc"
+                                        "email": "lucas@gmail.com",
+                                        "password": "lulululu"
                                     }
                                 }
                             }
@@ -45,7 +44,7 @@
                     "200": {
                         "description": "OK",
                         "content": {
-                            "aplication/json":{
+                            "application/json":{
                                 "schema":{
                                     "type": "object",                
                                         "$ref":"#/components/schemas/Users"
@@ -56,26 +55,22 @@
                 }
             }
         },
-        "/classes":{
+        "/Places":{
             "post":{
-               "summary": "Dados das Classes",
-               "description": "Rota responsável por exibir os dados da classe",
-               "tags": ["Classes"],
+               "summary": "Dados das Places",
+               "description": "Rota responsável por inserir os dados",
+               "tags": ["Places"],
                "security" : [{"bearerAuth":{}}],
                "requestBody":{
                    "content":{
-                       "aplication/json":{
+                       "application/json":{
                            "schema":{
-                            "$ref": "#/components/schemas/Classes"
+                            "$ref": "#/components/schemas/Places"
                            },
                            "examples": {
-                                "Classes": {
+                                "Places": {
                                     "value":{
-                                        "name": "História",
-                                        "description": "Classe da aula de história",
-                                        "data_init": "2000-01-01T02:00:00.000Z",
-                                        "data_end": "2000-01-01T02:00:00.000Z",
-                                        "total_comments": "0"
+                                        "name": "celular"
                                     }
                                 }
                             }
@@ -91,10 +86,10 @@
                     "200": {
                         "description": "OK",
                         "content": {
-                            "aplication/json":{
+                            "application/json":{
                                 "schema":{
                                     "type": "object",                
-                                        "$ref":"#/components/schemas/Classes"
+                                        "$ref":"#/components/schemas/Places"
                                 }
                             }
                         }
@@ -103,15 +98,15 @@
             },
 
             "get":{
-                "summary": "Dados das Classes",
-                "description": "Rota responsável por exibir os dados da classe",
-                "tags": ["Classes"],
-                "security" : [{"bearerAuth":{}}],
+                "summary": "Dados das Places",
+                "description": "Rota responsável por exibir os dados do place",
+                "tags": ["Places"],
+                "security" : [{"bearerAuth":{ }}],
                 "parameters":[
                 {
-                     "name": "name",
+                     "name": "search",
                      "in": "query",
-                     "description":"Nome da classe para busca",
+                     "description":"Nome do place para busca",
                      "required": false
                 
                  }
@@ -123,11 +118,11 @@
                      "200": {
                          "description": "OK",
                          "content": {
-                             "aplication/json":{
+                             "application/json":{
                                  "schema":{
                                     "type": "array",                
                                     "itens": {
-                                        "$ref":"#/components/schemas/Classes"
+                                        "$ref":"#/components/schemas/Places"
                                     }
                                          
                                  }
@@ -138,33 +133,29 @@
             },
 
             "put":{
-                "summary": "Alterar a Classe pelo id",
-                "description": "Alterar a Classe pelo id",
-                "tags": ["Classes"],
+                "summary": "Altera o places pelo id",
+                "description": "Altera o places pelo id",
+                "tags": ["Places"],
                 "security" : [{"bearerAuth":{}}],
                 "parameters":[
                 {
                      "name": "id",
                      "in": "query",
-                     "description":"Nome da classe para busca",
+                     "description":"Nome da places para busca",
                      "required": false
                 
                  }
                  ],
                 "requestBody":{
                     "content":{
-                        "aplication/json":{
+                        "application/json":{
                             "schema":{
-                             "$ref": "#/components/schemas/Classes"
+                             "$ref": "#/components/schemas/Places"
                             },
                             "examples": {
-                                "Classes": {
+                                "Places": {
                                     "value":{
-                                         "name": "História",
-                                         "description": "Classe da aula de história",
-                                         "data_init": "2000-01-01T02:00:00.000Z",
-                                         "data_end": "2000-01-01T02:00:00.000Z",
-                                         "total_comments": "0"
+                                         "name": "História"
                                     }
                                  
                                 }
@@ -175,19 +166,18 @@
                 }
             }
         },
-        "/classes/{id}":{
+        "/Places/{id}":{
             "get":{
-               "summary": "Busca dados das Classes pelo id",
-               "description": "Rota responsável por exibir os dados da classe pelo id",
-               "tags": ["Classes"],
+               "summary": "Busca dados dos Places pelo id",
+               "description": "Rota responsável por exibir os dados dos places pelo id",
+               "tags": ["Places"],
                "security" : [{"bearerAuth":{}}],
                "parameters":[
                {
                     "name": "id",
                     "in": "path",
-                    "description":"Nome da classe pelo id",
-                    "required": false
-               
+                    "description":"Id do place",
+                    "required": false   
                 }
                 ],
                 "responses":{
@@ -197,10 +187,10 @@
                     "200": {
                         "description": "OK",
                         "content": {
-                            "aplication/json":{
+                            "application/json":{
                                 "schema":{
                                     "type": "object",                
-                                        "$ref":"#/components/schemas/Classes"
+                                        "$ref":"#/components/schemas/Places"
                                 }
                             }
                         }
@@ -209,8 +199,8 @@
             },
 
             "delete": {
-                "tags": ["Classes"],
-                "summary": "Apagando uma classe",
+                "tags": ["Places"],
+                "summary": "Apagando um places",
                 "description": "",
                 "security" : [{"bearerAuth":{}}],
 
@@ -218,7 +208,7 @@
                   {
                     "name": "id",
                     "in": "path",
-                    "description": "Classe id para apagar",
+                    "description": "places id para apagar",
                     "required": true,
                     "type": "string"
                   }
@@ -233,130 +223,10 @@
                   "200": {
                     "description": "OK",
                     "content": {
-                        "aplication/json":{
+                        "application/json":{
                             "schema":{
                                 "type": "object",                
-                                    "$ref":"#/components/schemas/Classes"
-                            }
-                        }
-                    }
-                }
-                }
-
-              }
-        },
-
-        "/comments":{
-            "post":{
-               "summary": "Dados dos Comments",
-               "description": "Rota responsável por exibir os dados do Comments",
-               "tags": ["Comments"],
-               "security" : [{"bearerAuth":{}}],
-               "requestBody":{
-                   "content":{
-                       "aplication/json":{
-                           "schema":{
-                            "$ref": "#/components/schemas/Classes"
-                           },
-                           "examples": {
-                                "Comments": {
-                                    "value":{
-                                        "id_class": "61e726391f34139b556ad6cf",
-                                        "comment": "Isto aqui é um comentário"
-                                        
-                                    }
-                                }
-                            }
-                        }
-                    }
-               
-                },
-                
-                "responses":{
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "aplication/json":{
-                                "schema":{
-                                    "type": "object",                
-                                        "$ref":"#/components/schemas/Comments"
-                                }
-                            }
-                        }
-                    }
-                }
-            },
-
-            "get":{
-                "summary": "Dados dos Comments",
-                "description": "Rota responsável por exibir os dados do Comment",
-                "tags": ["Comments"],
-                "security" : [{"bearerAuth":{}}],
-                "parameters":[
-                {
-                     "name": "name",
-                     "in": "query",
-                     "description":"Nome da classe para busca",
-                     "required": false
-                
-                 }
-                 ],
-                 "responses":{
-                     "401": {
-                         "description": "Unauthorized"
-                     },
-                     "200": {
-                         "description": "OK",
-                         "content": {
-                             "aplication/json":{
-                                 "schema":{
-                                    "type": "array",                
-                                    "itens": {
-                                        "$ref":"#/components/schemas/Comments"
-                                    }
-                                         
-                                 }
-                             }
-                         }
-                     }
-                 }
-            }
-        },
-
-        "/comments/{id}":{
-            
-            "delete": {
-                "tags": ["Comments"],
-                "summary": "Apagando um Comment",
-                "description": "",
-                "security" : [{"bearerAuth":{}}],
-
-                "parameters": [
-                  {
-                    "name": "id",
-                    "in": "path",
-                    "description": "Comment id para apagar",
-                    "required": true,
-                    "type": "string"
-                  }
-                ],
-                "responses": {
-                  "400": {
-                    "description": "Invalid ID supplied"
-                  },
-                  "404": {
-                    "description": "Comment not found"
-                  },
-                  "200": {
-                    "description": "OK",
-                    "content": {
-                        "aplication/json":{
-                            "schema":{
-                                "type": "object",                
-                                    "$ref":"#/components/schemas/Comments"
+                                    "$ref":"#/components/schemas/Places"
                             }
                         }
                     }
@@ -370,10 +240,7 @@
         "schemas":{
             "Users":{
                 "type": "object",
-                "properties": {
-                 "name":{
-                     "type": "string" 
-                 },
+                "properties": {               
                  "email":{
                      "type": "string" 
                  },
@@ -382,31 +249,13 @@
                  }
                 }
             },
-            "Classes":{
+            "Places":{
                 "type": "object",
                 "properties": {
                     "name":{
                         "type": "string" 
                     },
-                    "description":{
-                        "type": "string" 
-                    },
-                    "data_init":{
-                        "type": "Date" 
-                    },"data_end":{
-                        "type": "Date" 
-                    },"total_comments":{
-                        "type": "number" 
-                    }
-                }
-            },
-            "Comments":{
-                "type": "object",
-                "properties": {
-                    "id_class":{
-                        "type": "string" 
-                    },
-                    "comment":{
+                    "photo":{
                         "type": "string" 
                     }
                 }
